build: add header files dependencies
Since we are now building greybus in kernel tree and headers are not
available under the regular uapi for user space to use them, let's add
now the greybus_protocols and greybus_manifest header files to gbsim and
try to make them in sync with any kernel change if needed it.

Remove the entry in the Makefile and configure regarding the need for a
GBDIR specific variable directory.

Signed-off-by: Rui Miguel Silva <rmfrfs@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,6 @@
 AM_LDFLAGS = \
 	-Wl,--as-needed
 
-GBUS_CPPFLAGS = -I${GBDIR}
-
 data_DATA =
 
 bin_PROGRAMS = \
@@ -16,6 +14,8 @@ gbsim_SOURCES = \
 	gadget.c \
 	gbsim.h \
 	gpio.c \
+	greybus_protocols.h \
+	greybus_manifest.h \
 	control.c \
 	svc.c \
 	i2c.c \
